--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,11 @@ management:
   endpoints:
     web:
       exposure:
-        include: info, health #TODO enable only info and health for security purposes. Consider that we may want to still access other actuator endpoints securely.
+        include: info, health, prometheus #TODO enable only info and health for security purposes. Consider that we may want to still access other actuator endpoints securely.
 logging:
   pattern:
     level: "%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
+
+io:
+  prometheus:
+    otelExemplars:
